updating to use filewatcher within the service worker as well as cross domain service worker support

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -10,6 +10,6 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server"
   }
 }
