--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -10,6 +10,7 @@
     "@babel/plugin-transform-typescript": "^7.9.4",
     "@babel/preset-env": "^7.9.0",
     "@types/babel__core": "^7.1.7",
+    "assert-never": "^1.2.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.0.3",
