--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.0.3",
+    "tarstream": "0.0.1",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
