using webpack to mitgate the deno weirdness with the ".ts" imports and leveraging forked deno for conventional TS in the std lib.

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,6 @@
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
-    "start": "../file-daemon/file-daemon.ts",
-    "clear-cache": "rm -rf $HOME/Library/Caches/deno"
+    "start": "deno --allow-net --allow-read ../file-daemon/dist/main.js -d ."
   }
 }
