--- a/packages/file-daemon/tsconfig.json
+++ b/packages/file-daemon/tsconfig.json
@@ -3,14 +3,13 @@
     "allowJs": true,
     "baseUrl": ".",
     "esModuleInterop": true,
-    "lib": ["esnext"],
     "module": "esnext",
-    "moduleResolution": "node",
-    "noEmit": true,
+    "moduleResolution": "Node",
+    "declaration": true,
+    "sourceMap": true,
     "pretty": true,
     "resolveJsonModule": true,
     "target": "esnext",
-    "typeRoots": [],
     "strict": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
