--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,15 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "Start File Daemon",
+      "cwd": "${workspaceRoot}/packages/app",
+      "env": {},
+      "program": "${workspaceRoot}/packages/file-daemon/index.js",
+      "args": ["-d", "."]
+    },
+    {
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
