fixed webpack launch issue and updated scripts and readme

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /packages/tarstream/**/*.d.ts
 /packages/tarstream/**/*.js
 /packages/tarstream/**/*.js.map
+/packages/builder/**/*.d.ts
+/packages/builder/**/*.js
+/packages/builder/**/*.js.map
