--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ../file-daemon/dist/main.js -d .",
-    "start-src": "node ../file-daemon -d ."
+    "start-pkg": "node ../file-daemon/dist/main.js -d .",
+    "start": "node ../file-daemon -d ."
   }
 }
