--- a/packages/tarstream/package.json
+++ b/packages/tarstream/package.json
@@ -2,11 +2,5 @@
   "name": "tarstream",
   "version": "0.0.1",
   "main": "index.js",
-  "license": "MIT",
-  "peerDependencies": {
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    "typescript": "^3.8.3"
-  }
+  "license": "MIT"
 }
