--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -15,6 +15,7 @@
     "mime-types": "^2.1.26",
     "tarstream": "0.0.1",
     "typescript": "^3.8.3",
+    "typescript-memoize": "^1.0.0-alpha.3",
     "walk-sync": "^2.0.2",
     "ws": "^7.2.3",
     "yargs": "^15.3.1"
