--- a/packages/file-daemon/tsconfig.json
+++ b/packages/file-daemon/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "target": "esnext",
     "strict": true,
+    "experimentalDecorators": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true
