--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -3,6 +3,7 @@
   "license": "MIT",
   "version": "0.0.1",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/fs-extra": "^8.1.0",
     "@types/http-proxy": "^1.17.4",
     "@types/mime-types": "^2.1.0",
