removing vendored web-streams-poly and using as npm dep (plus updated docs)

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   ],
   "private": true,
   "scripts": {
-    "watch": "tsc --watch",
+    "init": "npm run build:web-streams-polyfill",
     "build": "tsc",
+    "build:web-streams-polyfill": "cd ./node_modules/web-streams-polyfill && npm run build",
     "builder": "cd packages/builder && yarn start",
     "serve": "cd packages/app && yarn start"
   }
