--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -18,28 +18,9 @@
     "typescript": "^3.8.3",
     "typescript-memoize": "^1.0.0-alpha.3",
     "walk-sync": "^2.0.2",
-    "web-streams-polyfill": "habdelra/web-streams-polyfill#72e0b059036f60bf00e36fc4a6ae9145b8e149e4",
+    "web-streams-polyfill": "^2.1.1",
     "ws": "^7.2.3",
     "yargs": "^15.3.1"
-  },
-  "devDependencies": {
-    "@microsoft/api-extractor": "^7.7.8",
-    "@rollup/plugin-inject": "^4.0.1",
-    "@rollup/plugin-replace": "^2.3.1",
-    "@rollup/plugin-strip": "^1.3.2",
-    "@rollup/plugin-typescript": "^4.0.0",
-    "@types/node": "^12.12.30",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "jasmine": "^3.5.0",
-    "micromatch": "^4.0.2",
-    "rollup": "^2.0.6",
-    "rollup-plugin-terser": "^5.3.0",
-    "ts-morph": "^6.0.3",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3",
-    "wpt-runner": "^2.8.0"
   },
   "scripts": {
     "start": "webpack --watch",
