--- a/packages/file-daemon/tsconfig.json
+++ b/packages/file-daemon/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "baseUrl": ".",
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "Node",
     "declaration": true,
-    "sourceMap": true,
+    "esModuleInterop": true,
+    "module": "es6",
+    "moduleResolution": "Node",
     "pretty": true,
-    "resolveJsonModule": true,
-    "target": "esnext",
+    "target": "ES2020",
     "strict": true,
+    "sourceMap": true,
     "experimentalDecorators": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
