--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "es2020",
-    "moduleResolution": "Node",
     "declaration": true,
     "esModuleInterop": true,
+    "module": "es6",
+    "moduleResolution": "Node",
+    "pretty": true,
+    "target": "ES2020",
+    "strict": true,
     "sourceMap": true,
     "experimentalDecorators": true,
     "allowUnreachableCode": false,
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "lib": ["ES2020", "ScriptHost", "WebWorker", "WebWorker.ImportScripts"]
