--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -11,6 +11,7 @@
     "@babel/plugin-transform-typescript": "^7.9.4",
     "@babel/preset-env": "^7.9.0",
     "@types/babel__core": "^7.1.7",
+    "@types/columnify": "^1.5.0",
     "assert-never": "^1.2.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -23,5 +24,10 @@
   },
   "scripts": {
     "start": "webpack-dev-server"
+  },
+  "dependencies": {
+    "columnify": "^1.5.4",
+    "moment": "^2.24.0",
+    "perms": "^0.1.0"
   }
 }
