Cleaned up file system: removing the concept of "root" dir parameters, removed "name" from file and directory instances and their stat's, added mount path for webserver

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -29,7 +29,6 @@
   },
   "dependencies": {
     "columnify": "^1.5.4",
-    "moment": "^2.24.0",
-    "perms": "^0.1.0"
+    "moment": "^2.24.0"
   }
 }
