starting to add parse5

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -28,7 +28,9 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@types/parse5": "^5.0.2",
     "columnify": "^1.5.4",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "parse5": "^6.0.0"
   }
 }
