updated builder to overlay build on origin in filesystem, and preserve the original application entry points as src-*.html

--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -33,8 +33,8 @@
     "test-headless": "yarn node-qunit-puppeteer http://localhost:8080"
   },
   "dependencies": {
-    "@types/parse5": "^5.0.2",
     "columnify": "^1.5.4",
+    "dom-serializer": "^0.2.2",
     "htmlparser2": "^4.1.0",
     "moment": "^2.24.0"
   }
