--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "private": true,
   "scripts": {
+    "clean": "git clean -x -f",
     "build": "tsc",
     "test": "cd packages/builder && yarn test",
     "builder": "cd packages/builder && yarn start",
