--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 **/*.log
 /node_modules
+/packages/builder/test/test-app
+/packages/builder/.file-daemon-key
+
 /packages/*/node_modules
 /packages/*/dist
 /packages/file-daemon/**/*.d.ts
