--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "files-daemon",
+  "name": "file-daemon",
   "license": "MIT",
   "version": "0.0.1",
   "dependencies": {
@@ -7,6 +7,7 @@
     "@types/fs-extra": "^8.1.0",
     "@types/http-proxy": "^1.17.4",
     "@types/mime-types": "^2.1.0",
+    "@types/qs": "^6.9.1",
     "@types/ws": "^7.2.3",
     "@types/yargs": "^15.0.4",
     "esm": "^3.2.25",
@@ -14,6 +15,7 @@
     "http-proxy": "^1.18.0",
     "http-server": "^0.12.1",
     "mime-types": "^2.1.26",
+    "qs": "^6.9.3",
     "tarstream": "0.0.1",
     "typescript": "^3.8.3",
     "typescript-memoize": "^1.0.0-alpha.3",
