--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -24,6 +24,9 @@
     "ws": "^7.2.3",
     "yargs": "^15.3.1"
   },
+  "devDependencies": {
+    "webpack": "^4.42.1"
+  },
   "scripts": {
     "start": "webpack --watch",
     "typecheck": "tsc"
