--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -30,8 +30,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "start:test-file-daemon": "node ./bin/set-file-daemon-key.js && mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon -d . -p 4201 -w 3001 -k `cat ../../.file-daemon-key`",
-    "start:test-file-daemon-silent": "node ./bin/set-file-daemon-key.js && mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon -d . -p 4201 -w 3001 -k `cat ../../.file-daemon-key` > /dev/null",
-    "test": "yarn start-server-and-test start:test-file-daemon-silent http://localhost:4201/__alive__ start http-get://localhost:8080 test:headless",
+    "test": "yarn start-server-and-test start:test-file-daemon http://localhost:4201/__alive__ start http-get://localhost:8080 test:headless",
     "test:headless": "yarn node-qunit-puppeteer http://localhost:8080"
   },
   "dependencies": {
