--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -34,6 +34,8 @@
     "test:headless": "yarn node-qunit-puppeteer http://localhost:8080"
   },
   "dependencies": {
+    "@babel/traverse": "^7.9.5",
+    "@types/babel__traverse": "^7.0.10",
     "@types/lodash": "^4.14.150",
     "columnify": "^1.5.4",
     "dom-serializer": "^0.2.2",
