--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -37,6 +37,7 @@
     "@babel/traverse": "^7.9.5",
     "@types/babel__traverse": "^7.0.10",
     "@types/lodash": "^4.14.150",
+    "bind-decorator": "^1.0.11",
     "columnify": "^1.5.4",
     "dom-serializer": "^0.2.2",
     "htmlparser2": "^4.1.0",
