proxy webpack builder requests through the file daemon and serve the ui ember app in an iframe from the main application

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /packages/builder/**/*.d.ts
 /packages/builder/**/*.js
 /packages/builder/**/*.js.map
+/packages/ui/**/*.d.ts
+/packages/ui/**/*.js
+/packages/ui/**/*.js.map
