--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -48,7 +48,7 @@
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
     "ember-template-lint": "^2.6.0",
-    "ember-welcome-page": "^4.0.0",
+    "ember-truth-helpers": "^2.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-ember": "^8.4.0",
     "eslint-plugin-node": "^11.1.0",
