--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "tarstream",
+  "name": "shared",
   "version": "0.0.1",
-  "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "shared": "0.0.1"
-  },
   "devDependencies": {
     "typescript": "^3.8.3"
   }
