--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,7 +55,13 @@
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
+    "shared": "0.0.1",
     "typescript": "^3.8.3"
+  },
+  "workspaces": {
+    "nohoist": [
+      "@types/**"
+    ]
   },
   "engines": {
     "node": "10.* || >= 12"
