--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,24 @@
     },
     {
       "type": "typescript",
+      "tsconfig": "packages/builder-node/tsconfig.json",
+      "runOptions": {
+        "runOn": "folderOpen"
+      },
+      "option": "watch",
+      "problemMatcher": {
+        "base": "$tsc-watch",
+        "applyTo": "allDocuments"
+      },
+      "group": "build",
+      "label": "tsc: watch - builder-node",
+      "isBackground": true,
+      "presentation": {
+        "panel": "new"
+      }
+    },
+    {
+      "type": "typescript",
       "tsconfig": "packages/builder-worker/tsconfig.json",
       "runOptions": {
         "runOn": "folderOpen"
