Adding support for running node tests from a TSC build via ESM because my lapotop is going _very_ slow when debugging the webpack bundle (sadly esm doesn't play nice with ES2020 which supports nullish colascing ಥʖ̯ಥ

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /packages/builder-worker/test/test-app
 /packages/builder-worker/.file-daemon-key
 /packages/builder-worker/assets
+/packages/builder-node/test/testing
 
 /packages/*/node_modules
 /packages/*/dist
