--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -7,7 +7,11 @@
     "fs-extra": "^9.0.0"
   },
   "devDependencies": {
+    "esm": "^3.2.25",
     "qunit": "^2.9.3",
     "typescript": "^3.8.3"
+  },
+  "volta": {
+    "node": "14.2.0"
   }
 }
