--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/fs-extra": "^8.1.0",
+    "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0"
   },
   "devDependencies": {
