--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:builder-worker": "cd packages/builder-worker && yarn test",
     "test:builder-node": "cd packages/builder-worker && yarn webpack && yarn qunit assets/node-test.js",
     "builder": "cd packages/builder-worker && yarn start",
-    "serve": "cd packages/app && yarn start"
+    "serve": "cd packages/app && yarn start",
+    "ui": "cd packages/ui && yarn start"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
