updating to use ember-cli-typescript (and related ts lint fixes)

--- a/packages/builder-dom/tsconfig.json
+++ b/packages/builder-dom/tsconfig.json
@@ -13,6 +13,12 @@
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "lib": ["ES2020", "ScriptHost", "DOM"]
   }
 }
