--- a/packages/file-daemon/tsconfig.json
+++ b/packages/file-daemon/tsconfig.json
@@ -11,7 +11,13 @@
     "experimentalDecorators": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true
   },
   "include": ["./**/*.ts"]
 }
