--- a/packages/tarstream/tsconfig.json
+++ b/packages/tarstream/tsconfig.json
@@ -11,6 +11,12 @@
     "experimentalDecorators": true,
     "allowUnreachableCode": false,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true
   }
 }
