--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,6 +27,7 @@
     "@types/ember-qunit": "^3.4.8",
     "@types/ember__test-helpers": "^0.7.10",
     "@types/qunit": "^2.9.1",
+    "@types/rsvp": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "babel-eslint": "^10.1.0",
@@ -40,10 +41,12 @@
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-typescript": "^3.1.3",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
+    "ember-concurrency": "^1.1.7",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
-    "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
@@ -57,7 +60,7 @@
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
     "shared": "0.0.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.2"
   },
   "workspaces": {
     "nohoist": [
