--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,17 +1,40 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "esModuleInterop": true,
-    "module": "es6",
-    "moduleResolution": "Node",
-    "pretty": true,
-    "target": "ES2020",
-    "strict": true,
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "allowUnreachableCode": false,
+    "target": "es2017",
+    "allowJs": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "lib": ["ES2020", "ScriptHost", "DOM"]
-  }
+    "noImplicitReturns": true,
+    "noEmitOnError": false,
+    "noEmit": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "baseUrl": ".",
+    "module": "es6",
+    "experimentalDecorators": true,
+    "paths": {
+      "ui/tests/*": [
+        "tests/*"
+      ],
+      "ui/*": [
+        "app/*"
+      ],
+      "*": [
+        "types/*"
+      ]
+    }
+  },
+  "include": [
+    "app/**/*",
+    "tests/**/*",
+    "types/**/*"
+  ]
 }
