--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ui": "cd packages/ui && yarn start"
   },
   "devDependencies": {
+    "@types/ember__engine": "^3.0.5",
     "npm-run-all": "^4.1.5"
   },
   "resolutions": {
