--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,6 +29,7 @@
     "@types/ember__test-helpers": "^0.7.10",
     "@types/qunit": "^2.9.1",
     "@types/rsvp": "^4.0.3",
+    "@typescript-eslint/parser": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-property-assignment-to-decorator": "^0.1.1",
     "broccoli-asset-rev": "^3.0.0",
