--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "esm": "^3.2.25",
     "qunit": "^2.9.3",
+    "testem": "^3.1.0",
     "typescript": "^3.9.3"
   },
   "volta": {
