--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "build:shared": "cd packages/shared && tsc",
     "build:tarstream": "cd packages/tarstream && tsc",
     "build:ui": "cd packages/ui && tsc",
+    "build:test-app": "node ./packages/builder-node/bin/build.js packages/app",
     "test": "npm-run-all test:*",
     "test:builder-worker": "cd packages/builder-worker && yarn test",
     "test:builder-node": "cd packages/builder-worker && yarn webpack && yarn qunit assets/node-test.js",
+    "test:test-app": "testem ci",
     "builder": "cd packages/builder-worker && yarn start",
     "serve": "cd packages/app && yarn start",
     "ui": "cd packages/ui && yarn start"
   },
   "devDependencies": {
     "@types/ember__engine": "^3.0.5",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "testem": "^3.1.0"
   },
   "resolutions": {
     "minimist": "^1.2.5"
