--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/yargs": "^15.0.4",
     "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "esm": "^3.2.25",
