--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@babel/traverse": "^7.9.5",
+    "@msgpack/msgpack": "^1.12.2",
     "@types/babel__traverse": "^7.0.10",
     "@types/lodash": "^4.14.150",
     "bind-decorator": "^1.0.11",
