--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "git clean -x -f",
     "build": "npm-run-all build:*",
     "build:file-daemon": "cd packages/file-daemon && tsc",
+    "build:file-daemon-client": "cd packages/file-daemon-client && tsc",
     "build:builder-worker": "cd packages/builder-worker && tsc",
     "build:builder-dom": "cd packages/builder-dom && tsc",
     "build:builder-node": "cd packages/builder-node && tsc",
@@ -18,6 +19,8 @@
     "build:tarstream": "cd packages/tarstream && tsc",
     "build:ui": "cd packages/ui && tsc",
     "test": "npm-run-all test:*",
+    "test:file-daemon": "cd packages/file-daemon && yarn test",
+    "test:file-daemon-client": "cd packages/file-daemon-client && yarn test",
     "test:builder-worker": "cd packages/builder-worker && yarn test",
     "test:builder-node": "cd packages/builder-worker && yarn webpack && yarn qunit assets/node-test.js",
     "test:test-app": "node ./packages/builder-node/bin/build.js packages/test-app --overlay && testem ci",
