--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -2,20 +2,33 @@
   "name": "file-daemon",
   "license": "MIT",
   "version": "0.0.1",
+  "bin": {
+    "file-daemon": "./bin/file-daemon"
+  },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/fs-extra": "^8.1.0",
     "@types/http-proxy": "^1.17.4",
+    "@types/koa": "^2.11.3",
+    "@types/koa-compose": "^3.2.5",
+    "@types/koa-send": "^4.1.2",
     "@types/mime-types": "^2.1.0",
     "@types/qs": "^6.9.1",
+    "@types/supertest": "^2.0.10",
     "@types/ws": "^7.2.3",
     "@types/yargs": "^15.0.4",
     "esm": "^3.2.25",
     "fs-extra": "^9.0.0",
     "http-proxy": "^1.18.0",
     "http-server": "^0.12.1",
+    "koa": "^2.13.0",
+    "koa-better-route": "^0.4.0",
+    "koa-compose": "^4.1.0",
+    "koa-proxies": "^0.11.0",
+    "koa-send": "^5.0.1",
     "mime-types": "^2.1.26",
     "qs": "^6.9.3",
+    "supertest": "^4.0.2",
     "tarstream": "0.0.1",
     "typescript": "^3.9.3",
     "typescript-memoize": "^1.0.0-alpha.3",
@@ -25,10 +38,14 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "fixturify-project": "^2.1.0",
+    "qunit": "^2.9.3",
     "webpack": "^4.42.1"
   },
   "scripts": {
     "start": "webpack --watch",
-    "typecheck": "tsc"
+    "build": "tsc",
+    "typecheck": "tsc --noEmit",
+    "test": "qunit test/index.js"
   }
 }
