--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -13,6 +13,7 @@
     "@types/koa-compose": "^3.2.5",
     "@types/koa-send": "^4.1.2",
     "@types/mime-types": "^2.1.0",
+    "@types/qunit": "^2.9.1",
     "@types/qs": "^6.9.1",
     "@types/supertest": "^2.0.10",
     "@types/ws": "^7.2.3",
