--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-transform-class-property-assignment-to-decorator": "^0.1.1",
     "broccoli-asset-rev": "^3.0.0",
     "builder-worker": "0.0.1",
+    "file-daemon-client": "0.0.1",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
@@ -68,11 +69,6 @@
     "qunit-dom": "^1.2.0",
     "shared": "0.0.1",
     "typescript": "^3.9.3"
-  },
-  "workspaces": {
-    "nohoist": [
-      "@types/**"
-    ]
   },
   "engines": {
     "node": "10.* || >= 12"
