--- a/packages/file-daemon-client/package.json
+++ b/packages/file-daemon-client/package.json
@@ -23,6 +23,7 @@
     "qunit": "^2.9.3",
     "sinon": "^9.0.2",
     "start-server-and-test": "^1.11.0",
+    "a-extractor": "2.0.2",
     "style-loader": "^1.1.3",
     "tarstream": "0.0.1",
     "typescript": "^3.9.3",
@@ -32,8 +33,9 @@
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "start:test-file-daemon": "node ./bin/set-file-daemon-key.js && mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon/bin/file-daemon.js -p 4201 -w 3001 -k `cat ../../.file-daemon-key` .",
-    "test": "yarn start-server-and-test start:test-file-daemon http://localhost:4201/catalogjs/alive start http-get://localhost:8080 test:headless",
+    "start:test-daemon": "mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon/bin/file-daemon.js -p 4201 -w 3001 .",
+    "start:control-daemon": "node ./bin/set-file-daemon-key.js && mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon/bin/file-daemon.js -p 4202 -w 3002 -k `cat ../../.file-daemon-key` .",
+    "test": "yarn start-server-and-test start:test-daemon http://localhost:4201/catalogjs/alive start:control-daemon http://localhost:4202/catalogjs/alive start http-get://localhost:8080 test:headless",
     "test:headless": "yarn node-qunit-puppeteer http://localhost:8080"
   },
   "dependencies": {
