progress on end-to-end file daemon testing

--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -13,8 +13,9 @@
     "@types/koa-compose": "^3.2.5",
     "@types/koa-send": "^4.1.2",
     "@types/mime-types": "^2.1.0",
-    "@types/qunit": "^2.9.1",
     "@types/qs": "^6.9.1",
+    "@types/qunit": "^2.9.1",
+    "@types/sane": "^2.0.0",
     "@types/supertest": "^2.0.10",
     "@types/ws": "^7.2.3",
     "@types/yargs": "^15.0.4",
@@ -29,6 +30,7 @@
     "koa-send": "^5.0.1",
     "mime-types": "^2.1.26",
     "qs": "^6.9.3",
+    "sane": "^4.1.0",
     "supertest": "^4.0.2",
     "tarstream": "0.0.1",
     "typescript": "^3.9.3",
