Added watcher support using sane and got all the file daemon client tests passing (plus misc test cleanup)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -77,6 +77,24 @@
     },
     {
       "type": "typescript",
+      "tsconfig": "packages/file-daemon-client/tsconfig.json",
+      "runOptions": {
+        "runOn": "folderOpen"
+      },
+      "option": "watch",
+      "problemMatcher": {
+        "base": "$tsc-watch",
+        "applyTo": "allDocuments"
+      },
+      "group": "build",
+      "label": "tsc: watch - file-daemon-client",
+      "isBackground": true,
+      "presentation": {
+        "panel": "new"
+      }
+    },
+    {
+      "type": "typescript",
       "tsconfig": "packages/shared/tsconfig.json",
       "runOptions": {
         "runOn": "folderOpen"
