--- a/packages/file-daemon-client/package.json
+++ b/packages/file-daemon-client/package.json
@@ -15,15 +15,16 @@
     "@types/columnify": "^1.5.0",
     "@types/qunit": "^2.9.1",
     "@types/sinon": "^9.0.1",
+    "a-extractor": "2.0.2",
     "assert-never": "^1.2.0",
     "babel-loader": "^8.1.0",
+    "concurrently": "^5.2.0",
     "css-loader": "^3.5.2",
     "glob": "^7.1.6",
     "node-qunit-puppeteer": "^2.0.1",
     "qunit": "^2.9.3",
     "sinon": "^9.0.2",
     "start-server-and-test": "^1.11.0",
-    "a-extractor": "2.0.2",
     "style-loader": "^1.1.3",
     "tarstream": "0.0.1",
     "typescript": "^3.9.3",
@@ -35,7 +36,8 @@
     "start": "webpack-dev-server",
     "start:test-daemon": "mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon/bin/file-daemon.js -p 4201 -w 3001 .",
     "start:control-daemon": "node ./bin/set-file-daemon-key.js && mkdir -p ./test/test-app && cd ./test/test-app && node ../../../file-daemon/bin/file-daemon.js -p 4202 -w 3002 -k `cat ../../.file-daemon-key` .",
-    "test": "yarn start-server-and-test start:test-daemon http://localhost:4201/catalogjs/alive start:control-daemon http://localhost:4202/catalogjs/alive start http-get://localhost:8080 test:headless",
+    "start:daemons": "concurrently 'yarn:start:control-daemon' 'yarn:start:test-daemon' || true",
+    "test": "yarn start-server-and-test start:daemons 'http://localhost:4201/catalogjs/alive|http://localhost:4202/catalogjs/alive' start http-get://localhost:8080 test:headless",
     "test:headless": "yarn node-qunit-puppeteer http://localhost:8080"
   },
   "dependencies": {
