--- a/packages/file-daemon/package.json
+++ b/packages/file-daemon/package.json
@@ -19,6 +19,7 @@
     "@types/supertest": "^2.0.10",
     "@types/ws": "^7.2.3",
     "@types/yargs": "^15.0.4",
+    "bind-decorator": "^1.0.11",
     "esm": "^3.2.25",
     "fs-extra": "^9.0.0",
     "http-proxy": "^1.18.0",
