--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,8 @@
       "program": "${workspaceRoot}/packages/builder-node/bin/build.js",
       "args": [
         "--project=packages/test-app,http://build-output",
-        "--project=packages/test-lib,http://localhost:4200/test-lib/"
+        "--project=packages/test-lib,http://localhost:4200/test-lib/",
+        "--overlay"
       ]
     },
     {
