--- a/packages/builder-worker/package.json
+++ b/packages/builder-worker/package.json
@@ -39,6 +39,7 @@
     "@msgpack/msgpack": "^1.12.2",
     "@types/babel__traverse": "^7.0.10",
     "@types/lodash": "^4.14.150",
+    "base64-arraybuffer": "^0.2.0",
     "bind-decorator": "^1.0.11",
     "columnify": "^1.5.4",
     "dom-serializer": "^0.2.2",
