added logic to detect ES6 modules when describing a file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
   "eslint.validate": ["javascript", "typescript"],
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "cSpell.ignoreWords": [
+    "aurl",
+    "bundle",
+    "bundle aurl",
+    "jojo"
+  ]
 }
