WIP: working thru builder node to establish package sources from github by following deps

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /packages/builder-worker/.file-daemon-key
 /packages/builder-worker/assets
 /packages/builder-node/test/testing
+/pkg-src
 
 /packages/*/node_modules
 /packages/*/dist
