--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/tmp": "^0.2.0",
     "@types/yargs": "^15.0.4",
     "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0",
+    "isomorphic-git": "^1.7.4",
     "node-fetch": "^2.6.0",
+    "tmp": "^0.2.1",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
