--- a/packages/builder-worker/tsconfig.json
+++ b/packages/builder-worker/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
-    "module": "es6",
+    "module": "ES2020",
     "moduleResolution": "Node",
     "pretty": true,
     "target": "ES6",
