Updated based on Ed's review: use resolve-pkg to resolve packages, removed all semver logic in builder node, leveraging git worktrees for pkg src caching, move npm-import builder node into worker-builder package, consolidating dirs that are passed into builder-node, removing all fs mounts, and a few other misc items

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -60,7 +60,7 @@
       "cwd": "${workspaceRoot}",
       "env": {},
       "program": "${workspaceRoot}/packages/builder-node/bin/install.js",
-      "args": ["--nodeModules=./node_modules", "--pkg=@babel/core:^7.9.0"]
+      "args": ["--project=.", "@babel/core"]
     },
     {
       "type": "node",
