--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -9,8 +9,8 @@
     "@types/yargs": "^15.0.4",
     "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0",
-    "isomorphic-git": "^1.7.4",
     "node-fetch": "^2.6.0",
+    "resolve-pkg": "^2.0.0",
     "tmp": "^0.2.1",
     "yargs": "^15.3.1"
   },
