--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/semver": "^7.3.1",
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^15.0.4",
     "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0",
     "node-fetch": "^2.6.0",
+    "recipes": "0.0.1",
     "resolve-pkg": "^2.0.0",
+    "semver": "^7.3.2",
     "tmp": "^0.2.1",
     "yargs": "^15.3.1"
   },
