--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "builder-node",
+  "name": "@catalogjs/builder-node",
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
+    "@catalogjs/file-daemon": "0.0.1",
+    "@catalogjs/recipes": "0.0.1",
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
     "@types/semver": "^7.3.1",
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^15.0.4",
-    "file-daemon": "0.0.1",
     "fs-extra": "^9.0.0",
     "node-fetch": "^2.6.0",
-    "recipes": "0.0.1",
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
     "tmp": "^0.2.1",
