--- a/packages/tarstream/package.json
+++ b/packages/tarstream/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tarstream",
+  "name": "@catalogjs/tarstream",
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "shared": "0.0.1"
+    "@catalogjs/shared": "0.0.1"
   },
   "devDependencies": {
     "typescript": "^3.9.3"
