--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "@catalogjs/ui",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for ui goes here",
@@ -20,6 +20,9 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@catalogjs/builder-worker": "0.0.1",
+    "@catalogjs/file-daemon-client": "0.0.1",
+    "@catalogjs/shared": "0.0.1",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
@@ -34,8 +37,6 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-class-property-assignment-to-decorator": "^0.1.1",
     "broccoli-asset-rev": "^3.0.0",
-    "builder-worker": "0.0.1",
-    "file-daemon-client": "0.0.1",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
@@ -67,7 +68,6 @@
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
-    "shared": "0.0.1",
     "typescript": "^3.9.3"
   },
   "engines": {
