--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/types": "^7.9.0",
     "@catalogjs/file-daemon": "0.0.1",
     "@catalogjs/recipes": "0.0.1",
     "@types/fs-extra": "^8.1.0",
@@ -11,6 +13,7 @@
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^15.0.4",
     "fs-extra": "^9.0.0",
+    "glob": "^7.1.6",
     "node-fetch": "^2.6.0",
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
@@ -18,6 +21,9 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@babel/traverse": "^7.9.5",
+    "@types/babel__core": "^7.1.7",
+    "@types/babel__traverse": "^7.0.10",
     "esm": "^3.2.25",
     "fixturify-project": "^2.1.0",
     "qunit": "^2.9.3",
