--- a/packages/builder-node/package.json
+++ b/packages/builder-node/package.json
@@ -9,13 +9,14 @@
     "@catalogjs/recipes": "0.0.1",
     "@types/fs-extra": "^8.1.0",
     "@types/node-fetch": "^2.5.7",
+    "@types/resolve": "^1.17.1",
     "@types/semver": "^7.3.1",
     "@types/tmp": "^0.2.0",
     "@types/yargs": "^15.0.4",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.6",
     "node-fetch": "^2.6.0",
-    "resolve-pkg": "^2.0.0",
+    "resolve": "^1.17.0",
     "semver": "^7.3.2",
     "tmp": "^0.2.1",
     "yargs": "^15.3.1"
